Fix menu padding on mobile and remove old md file

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -581,6 +581,7 @@ ol {
         border-radius: 15px 15px 0 0;
         z-index: unset;
         border-radius: 0;
+        padding: unset;
     }
 
     .menu-item i {
